hotfix duplicate attribute names validation